# cutList

./: README.md  main.py  pyproject.toml  sandbox.py  testing_modified.py
.devcontainer/: devcontainer.json
src/cutlist_app/: cutlist.py
tests/: cuts.csv  test_cutlist.py
